# jasonstudio

./: .env.example  .gitignore  AUTHORS  CLAUDE.md  README.md  manage.py  pyproject.toml
.github/workflows/: ci.yml
accounts/: admin.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_initial.py
docs/: conf.py  configuration.md  getting-started.md  google_drive_setup.md  index.md  models.md  views.md  workflow.md
docs/_static/: readthedocs-dummy.js
gallery/: admin.py  forms.py  models.py  urls.py  views.py  watermark.py
gallery/migrations/: 0001_initial.py
jasonstudio/: asgi.py  settings.py  urls.py  wsgi.py
src/jasonstudio/: urls.py
src/jasonstudio/accounts/: admin.py  apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
src/jasonstudio/accounts/migrations/: 0001_initial.py  0002_initial.py  0003_photographerprofile_email_body_template_and_more.py  0004_delivery_historicaldelivery.py  0004_historicalorder_drive_url_order_drive_url.py  0005_alter_historicalorder_status_alter_order_status_and_more.py  0006_remove_historicalorder_drive_url.py
src/jasonstudio/gallery/: admin.py  apps.py  exif.py  forms.py  google_drive.py  models.py  urls.py  views.py  watermark.py
src/jasonstudio/gallery/migrations/: 0001_initial.py  0002_default_services.py
src/jasonstudio/gallery/templatetags/: gallery_tags.py
src/jasonstudio/settings/: __init__.py  base.py  ci.py  debug.py  live.py
src/jasonstudio/templates/: base.html
src/jasonstudio/templates/accounts/: customer_form.html  customer_list.html  dashboard.html  download_email.txt  download_email_subject.txt  photographer_setup.html  signup.html
src/jasonstudio/templates/admin/: base_site.html
templates/: base.html
templates/accounts/: dashboard.html  login.html
templates/gallery/: event_gallery.html  manage_event.html  my_selections.html  photographer_dashboard.html  quotation_form.html  shared_download.html  upload.html
templates/gallery/partials/: photo_grid.html  selection_buttons.html  selection_summary.html
tests/: conftest.py  test_accounts.py  test_build_invoice.py  test_models.py  test_quotation.py  test_views.py
(+36 files in other folders)
