[project]
name = "jasonstudio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.6",
    "django-htmx>=1.27.0",
    "django-storages>=1.14.6",
    "pillow>=12.2.0",
]

[project.optional-dependencies]
docs = [
    "furo>=2025.12.19",
    "myst-parser>=5.1.0",
    "sphinx>=9.1.0",
    "sphinx-design>=0.7.0",
    "sphinx-inline-tabs>=2025.12.21.14",
]

[dependency-groups]
dev = [
    "furo>=2025.12.19",
    "myst-parser>=5.1.0",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "sphinx>=9.1.0",
    "sphinx-design>=0.7.0",
    "sphinx-inline-tabs>=2025.12.21.14",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "jasonstudio.settings"
pythonpath = ["."]
testpaths = ["tests"]
