[project]
name = "jasonstudio"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.6",
    "django-environ>=0.13.0",
    "django-fernet-encrypted-fields>=0.4.0",
    "django-htmx>=1.27.0",
    "django-storages>=1.14.6",
    "pillow>=12.2.0",
    "psycopg>=3.3.4",
]

[project.optional-dependencies]
mysql = ["mysqlclient>=2.2"]
docs = [
    "furo>=2025.12.19",
    "myst-parser>=5.1.0",
    "sphinx>=9.1.0",
    "sphinx-design>=0.7.0",
    "sphinx-inline-tabs>=2025.12.21.14",
]

[dependency-groups]
dev = [
    "furo>=2025.12.19",
    "myst-parser>=5.1.0",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "ruff>=0.13.0",
    "sphinx>=9.1.0",
    "sphinx-design>=0.7.0",
    "sphinx-inline-tabs>=2025.12.21.14",
]

[project.urls]
Homepage = "https://github.com/erikvw/jasonstudio"
Documentation = "https://jasonstudio.readthedocs.io"
Repository = "https://github.com/erikvw/jasonstudio.git"
Changelog = "https://github.com/erikvw/jasonstudio/blob/main/CHANGES"


[build-system]
requires = ["uv_build>=0.7.19,<0.8"]
build-backend = "uv_build"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "jasonstudio.settings.debug"
pythonpath = ["src"]
testpaths = ["tests"]
